--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
             android:name=".view.RegisterPageActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name=".view.FeedActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
